--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -67,39 +67,39 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYGOFLY }}
           script: "cd /var/www/agent.gofly.com.bd/dist && ./.scripts/deploy.sh"
-  # deployhstrip:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTHSTRIP }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYHSTRIP }}
-  #         script: "cd /var/www/agent.hstrip.net/dist && ./.scripts/deploy.sh"
-  # deploymyvoiaj:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTMYVOIAJ }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYMYVOIAJ }}
-  #         script: "cd /var/www/agent.myvoiaj.com/dist && ./.scripts/deploy.sh"
-  # deploynakamura:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTNAKAMURA }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYNAKAMURA }}
-  #         script: "cd /var/www/b2b.nakamura-tour.com/dist && ./.scripts/deploy.sh"
+  deployhstrip:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTHSTRIP }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYHSTRIP }}
+          script: "cd /var/www/agent.hstrip.net/dist && ./.scripts/deploy.sh"
+  deploymyvoiaj:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTMYVOIAJ }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYMYVOIAJ }}
+          script: "cd /var/www/agent.myvoiaj.com/dist && ./.scripts/deploy.sh"
+  deploynakamura:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTNAKAMURA }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYNAKAMURA }}
+          script: "cd /var/www/b2b.nakamura-tour.com/dist && ./.scripts/deploy.sh"
   # deployonewagent:
   #   runs-on: ubuntu-latest
   #   steps:
