--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -100,61 +100,61 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYNAKAMURA }}
           script: "cd /var/www/b2b.nakamura-tour.com/dist && ./.scripts/deploy.sh"
-  # deployonewagent:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTONEAGENT }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYONEAGENT }}
-  #         script: "cd /var/www/agent.oneagent.biz/dist && ./.scripts/deploy.sh"
-  # deploysand:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTSAND }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYSAND }}
-  #         script: "cd /var/www/sandbox-b2b.myvoiaj.com/dist && ./.scripts/deploy.sh"
-  # deploysinbd:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTSINBD }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYSINBD }}
-  #         script: "cd /var/www/agent.sinbadbd.com/dist && ./.scripts/deploy.sh"
-  # deploybiggo:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTBIGGO }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYBIGGO }}
-  #         script: "cd /var/www/agent.biggo.travel/dist && ./.scripts/deploy.sh"
-  # deployumrah:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTUMRAH }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHUMRAH }}
-  #         script: "cd /var/www/b2b.umrahbooking.com/dist && ./.scripts/deploy.sh"
+  deployonewagent:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTONEAGENT }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYONEAGENT }}
+          script: "cd /var/www/agent.oneagent.biz/dist && ./.scripts/deploy.sh"
+  deploysand:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTSAND }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYSAND }}
+          script: "cd /var/www/sandbox-b2b.myvoiaj.com/dist && ./.scripts/deploy.sh"
+  deploysinbd:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTSINBD }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYSINBD }}
+          script: "cd /var/www/agent.sinbadbd.com/dist && ./.scripts/deploy.sh"
+  deploybiggo:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTBIGGO }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYBIGGO }}
+          script: "cd /var/www/agent.biggo.travel/dist && ./.scripts/deploy.sh"
+  deployumrah:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTUMRAH }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHUMRAH }}
+          script: "cd /var/www/b2b.umrahbooking.com/dist && ./.scripts/deploy.sh"
   # deployrmmtravel:
   #   runs-on: ubuntu-latest
   #   steps:
