--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -177,3 +177,15 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYORBIT }}
           script: "cd /var/www/orbit.gtrsystem.com/dist && ./.scripts/deploy.sh"
+          
+ deployb2b:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTB2B }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHKEYB2B }}
+          script: "cd /var/www/orbit.gtrsystem.com/dist && ./.scripts/deploy.sh"
