--- a/.github/workflows/deploy_agent_inno.yml
+++ b/.github/workflows/deploy_agent_inno.yml
@@ -11,18 +11,6 @@ on:
 # Authenticate to the the server via ssh
 # and run our deployment script
 jobs:
-  deploy1:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTFAST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHFAST }}
-          script: "cd /var/www/apps.fasttravel.pk/dist && ./.scripts/deploy.sh"
-
   deploy2:
     runs-on: ubuntu-latest
     steps:
@@ -45,17 +33,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYAKIJ }}
           script: "cd /var/www/agent.akijair.com/dist && ./.scripts/deploy.sh"
-  deploybuyairticket:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTBUYAIRTICKET }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYBUYAIRTICKET }}
-          script: "cd /var/www/agent.buyairticket.com/dist && ./.scripts/deploy.sh"
   deploygofly:
     runs-on: ubuntu-latest
     steps:
@@ -100,17 +77,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYNAKAMURA }}
           script: "cd /var/www/b2b.nakamura-tour.com/dist && ./.scripts/deploy.sh"
-  # deployonewagent:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Deploy to Server
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: ${{ secrets.HOSTONEAGENT }}
-  #         username: ${{ secrets.USERNAME }}
-  #         key: ${{ secrets.SSHKEYONEAGENT }}
-  #         script: "cd /var/www/agent.oneagent.biz/dist && ./.scripts/deploy.sh"
   deploysand:
     runs-on: ubuntu-latest
     steps:
@@ -166,17 +132,17 @@ jobs:
   #         username: ${{ secrets.USERNAME }}
   #         key: ${{ secrets.SSHRMM }}
   #         script: "cd /var/www/agent.rmmtravel.com && ./.scripts/deploy.sh"
-  deployorbitgtr:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Server
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.HOSTORBIT }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSHKEYORBIT }}
-          script: "cd /var/www/orbit.gtrsystem.com/dist && ./.scripts/deploy.sh"
+  # deployorbitgtr:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - name: Deploy to Server
+  #       uses: appleboy/ssh-action@master
+  #       with:
+  #         host: ${{ secrets.HOSTORBIT }}
+  #         username: ${{ secrets.USERNAME }}
+  #         key: ${{ secrets.SSHKEYORBIT }}
+  #         script: "cd /var/www/orbit.gtrsystem.com/dist && ./.scripts/deploy.sh"
           
  deployb2b:
     runs-on: ubuntu-latest
@@ -188,4 +154,15 @@ jobs:
           host: ${{ secrets.HOSTB2B }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSHKEYB2B }}
+          script: "cd /var/www/book.fasttravel.pk/dist && ./.scripts/deploy.sh && cd /var/www/partner.buyairticket.com/dist && ./.scripts/deploy.sh"
+deployorbitgtr:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy to Server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOSTGTRS }}
+          username: ${{ secrets.USERNAME }}
+          key: ${{ secrets.SSHGTRS }}
           script: "cd /var/www/orbit.gtrsystem.com/dist && ./.scripts/deploy.sh"
